--- a/Jets2Oussama/app.json
+++ b/Jets2Oussama/app.json
@@ -11,6 +11,13 @@
     "ios": {
       "supportsTablet": true
     },
+    "dependencies": {
+    "expo": "~52.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "expo-av": "~15.0.1"
+  },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
